# dicom-rs

./: Cargo.toml  README.md
core/src/value/: mod.rs  primitive.rs
findscu/: Cargo.toml
findscu/src/: main.rs
object/src/: lib.rs  mem.rs
object/src/lazy/: mod.rs
object/tests/: integration_test.rs
parser/src/dataset/: lazy_read.rs  mod.rs
parser/src/stateful/: decode.rs
toimage/: Cargo.toml
toimage/src/: main.rs
